// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic flow Send wrong schema 1`] = `
{
  "errors": [
    {
      "message": "Federation validation failed",
      "errorCode": "FEDERATION_VALIDATION_FAILURE",
      "innerErrors": [
        "Unknown type: \\"HLFoo\\".",
        "Unknown type \\"HLFoo\\".",
        "Type Query must define one or more fields."
      ]
    }
  ],
  "data": {
    "result": null
  }
}
`;

exports[`Basic flow Update schema and query again 1`] = `
Object {
  "foo": "BAZ",
}
`;

exports[`Basic flow Update schema and query new fields 1`] = `
Object {
  "foo": "BAR",
}
`;

exports[`Basic flow Update schema, wait for interval update and query 1`] = `
Object {
  "foo": "TAZ",
}
`;
